# argilla-plugins

./: .gitignore  README.md  pyproject.toml
argilla_plugins/: __init__.py  __main__.py  _plugin_template.py
argilla_plugins/active_learning/: __init__.py  classy_learner.py
argilla_plugins/datasets/: __init__.py  end_of_life.py  hf_sync.py  remove_duplicate.py
argilla_plugins/inference/: __init__.py  embedder.py
argilla_plugins/programmatic_labelling/: __init__.py  token_classification_copycat.py  token_copycat.py
argilla_plugins/utils/: dependency_checker.py
tests/: conftest.py  helpers.py  test_classy_learner.py  test_embedder.py  test_end_of_life.py  test_remove_duplicate.py  test_token_classification_copycat.py  test_token_copycat.py
usage_examples/: test_classy_learner.py  test_remove_duplicate.py
