[tool.poetry]
name = "argilla-plugins"
version = "0.1.0"
description = "🔌 Open-source plugins for with practical features for Argilla using listeners."
authors = ["david <david.m.berenstein@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "argilla_plugins"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
argilla = {extras = ["listeners"], version = "^1.1.1"}
typer = "^0.7.0"
rich = {extras = ["jupyter"], version = "^13.0.0"}

# optionals reporting
datapane = { version = "^0.15.5", optional = true }
great-expectations = { version = "^0.15", optional = true }

[tool.poetry.extras]
reporting-datapane = ["datapane"]
reporting-greatexpectations = ["great-expectations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
